# otomo-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  build.rs  flash.sh  memory.x  rust-toolchain.toml
.cargo/: config  config.toml
otomo_hardware/: Cargo.toml  build.rs
otomo_hardware/examples/: battery.rs  bno.rs  buzzer.rs  i2c_finder.rs  lsm.rs  qei.rs  ultrasonic_maxbotix.rs
otomo_hardware/src/: battery_monitor.rs  buzzer.rs  imu.rs  led.rs  lib.rs  motors.rs  pwm.rs  qei.rs  serial.rs  ultrasonic.rs
otomo_hardware/src/imu/: bno055.rs  bno_regs.rs  lsm6dsox.rs  lsm_regs.rs
otomo_hardware/src/motors/: current_monitor.rs  encoder.rs  hbridge.rs  pololu_driver.rs
otomo_hardware/src/ultrasonic/: maxbotix.rs
protobuf/: asdf.proto
src/: asdf.rs  controls.rs  encoder.rs  hbridge.rs  hc05.rs  loggers.rs  logging.rs  main.rs  motors.rs  navigation.rs  proto.rs  time.rs  ultrasonic.rs
src/controls/: joystick.rs  motor_math.rs  odometry.rs  pid.rs
src/drivers/: imu.rs
src/loggers/: defmt_logger.rs  null_logger.rs  serial_logger.rs
src/logging/: defmt_logger.rs  serial_logger.rs
src/motors/: hbridge.rs
src/navigation/: constants.rs  safety_bubble.rs
