[package]
name = "otomo-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["TWALL9"]

[dependencies]
stm32f4xx-hal = { version = "0.13.2", features = ["stm32f407", "rtic"] }
usb-device = "0.2.9"

cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2.7"
alloc-cortex-m = "0.4.2"
panic-halt = { version = "0.2.0", optional = true }

cortex-m-rtic = "1.1.3"
rtic-monotonic = "1.0"
fugit = { version = "0.3.6", features = ["defmt"] }

log = { version = "0.4.17", default-features = false }

defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.3", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

prost = { version = "0.10", default-features = false, features = ["prost-derive"] }
prost-types = { version = "0.10", default-features = false }

heapless = "0.7.16"

num-traits = {version = "0.2.15", default-features = false}

otomo_hardware = {path = "./otomo_hardware"}
kiss_encoding = {path = "./kiss_encoding", features = ["alloc"] }

[features]
defmt_logger = ["defmt", "defmt-rtt", "panic-probe"]
null_logger = ["panic-halt"]
serial_logger = ["panic-halt"]

default = ["defmt_logger"]

[build-dependencies]
prost-build = "0.10"

[workspace]
members = [
    "otomo_hardware",
    "kiss_encoding",
]

[profile.dev]
debug = 2
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"
