[package]
name = "otomo-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["TWALL9"]

[dependencies]
stm32f4xx-hal = { version = "0.18", features = ["stm32f407", "rtic"] }
usb-device = "0.2.9"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "0.2.7"
embedded-hal-async = "1.0.0-rc.1"
alloc-cortex-m = "0.4.2"
panic-halt = { version = "0.2.0", optional = true }

rtic = { version = "2.0.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.3", features = ["embedded-hal-async", "stm32f407vg", "stm32_tim2"] }
rtic-sync = "1.0.1"
fugit = { version = "0.3.6", features = ["defmt"] }

log = { version = "0.4.17", default-features = false }

defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

prost = { version = "0.10", default-features = false, features = ["prost-derive"] }
prost-types = { version = "0.10", default-features = false }

num-traits = {version = "0.2.15", default-features = false}

otomo_hardware = {path = "./otomo_hardware"}
kiss_encoding = {path = "./kiss_encoding", features = ["alloc"] }

[features]
defmt_logger = ["defmt", "defmt-rtt", "panic-probe"]
null_logger = ["panic-halt"]
serial_logger = ["panic-halt"]

default = ["defmt_logger", "serial_logger"]

[build-dependencies]
prost-build = "0.10"

[workspace]
members = [
    "otomo_hardware",
    "kiss_encoding",
]

[profile.dev]
debug = 2
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"
