[package]
name = "otomo-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["TWALL9"]

[dependencies]
stm32f4xx-hal = { version = "0.21.0", features = ["stm32f407"] }
usb-device = "0.3.1"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
alloc-cortex-m = "0.4.2"
panic-halt = { version = "0.2.0", optional = true }

rtic = { version = "2.2.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.1.0", features = ["stm32f407vg", "stm32_tim2"] }
rtic-sync = "1.4.0"
fugit = { version = "0.3.6", features = ["defmt"] }

log = { version = "0.4.17", default-features = false }
heapless = "0.9.1"

defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

prost = { version = "0.14.1", default-features = false, features = ["derive"] }
prost-types = { version = "0.14.1", default-features = false }

num-traits = {version = "0.2.15", default-features = false}

otomo_hardware = {path = "./otomo_hardware"}
kiss_encoding = {git = "https://github.com/TWALL9/kiss-encoding.git", features = ["alloc"]}

[features]
defmt_logger = ["defmt", "defmt-rtt", "panic-probe"]
serial_logger = ["panic-halt"]
extra_logging = []
battery_task = []
imu_task = []

default = ["defmt_logger", "serial_logger", "imu_task"]

[build-dependencies]
prost-build = "0.14.1"

[workspace]
members = [
    "otomo_hardware",
]

[profile.dev]
debug = 2
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"
