[package]
name = "otomo_hardware"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["TWALL9"]

[dependencies]
panic-probe = { version = "0.3" }
stm32f4xx-hal = { version = "0.21.0", features = ["stm32f407", "otg-fs", "usb_fs"] }
usb-device = "0.3.1"
usbd-serial = "0.2.0"

cortex-m = "0.7.6"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
alloc-cortex-m = "0.4.2"

defmt = "0.3"
defmt-rtt = "0.3"

fugit = { version = "0.3.6", features = ["defmt"] }
num-traits = {version = "0.2.15", default-features = false}

[dependencies.embedded-hal-02]
package = "embedded-hal"
version = "0.2.7"

[dev-dependencies]
panic-halt = "0.2.0"
systick-monotonic = "1.0.1"
cortex-m-semihosting = "0.5.0"

[features]
ultrasonic_hcsr04 = []
default = []

[[example]]
name="qei"

[[example]]
name="ultrasonic_maxbotix"

[[example]]
name="i2c_finder"
